feat(frontend): add authentication and user store management(using zustand)
- Introduced new API request and response models for login and registration.
- Implemented user authentication logic with JWT token management.
- Created new layouts for authentication and content display.
- Added error handling components and localization for error messages.
- Refactored existing schemas and removed unused user creation schema.
- Enhanced user profile management with new UI components and translations.
- Set up a global Axios instance for API requests with interceptors for authentication.
- Implemented Zustand for state management of user authentication.
