# backend/app/router/auth.py
@@ -12,9 +12,9 @@ from fastapi import APIRouter
 
 from app.core import Result
 from app.schema import (
-    UserCreate,
-    UserResponse,
-    UserWithToken,
+    AuthResponse,
+    LoginRequest,
+    RegisterRequest,
 )
 from app.service import UserServiceDep
 
@@ -23,19 +23,19 @@ router = APIRouter(prefix="/api/auth", tags=["Authentication"])
 
 @router.post(
     "/register",
-    response_model=Result[UserResponse],
+    response_model=Result[AuthResponse],
     summary="User Registration",
     description="Register a new user with username and password.",
 )
-def register(request: UserCreate, user_service: UserServiceDep):
+def register(request: RegisterRequest, user_service: UserServiceDep):
     return Result.ok(data=user_service.register(request.username, request.password))
 
 
 @router.post(
     "/login",
-    response_model=Result[UserWithToken],
+    response_model=Result[AuthResponse],
     summary="User Login",
     description="Login with username and password, returns user info and access token.",
 )
-def login(request: UserCreate, user_service: UserServiceDep):
+def login(request: LoginRequest, user_service: UserServiceDep):
     return Result.ok(data=user_service.login(request.username, request.password))
